tests/testcases/errors/BCE0166-1.boo
"""
BCE0166-1.boo(5,5): BCE0166: Unknown macro 'bar'. Did you mean to declare the field 'bar as object'?
"""
class Foo:
	bar
